feat: adding resources to manage roles and company
